header and carousel

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+
+<div class="header">
+    <div class="headerLogo">
+        <img id="logo-blanco" src="assets/img/LetraLogoBlanco.png" alt="LogoBlanco">
+    </div>
+    <div class="headercIcoc">
+        <img src="assets/img/faceboockv.png" alt="faceboock" class="social-icon">
+        <img src="assets/img/instagram.png" alt="Instagram" class="social-icon">
+        <img src="assets/img/Wha.png" alt=".whatsapp" class="social-icon">
+    </div>    
+</div>
+
+        
+
