--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,7 +1,8 @@
 .carousel-inner{
-    height: 450px;
-}
-.carousel-item{
     height: 720px;
+}
+.carousel-item img{
+    height: 720px;
+    width: auto;
    
 }
