--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,6 +1,25 @@
 <div class="container">
     <h1>Nuevo Producto</h1>
     <div>
+    <div class="row imgContainer">
+            <div class="productImg col-md-5">
+                    <img [src]="croppedImage"alt="">
+                </div>
+                <image-cropper
+                [imageChangedEvent]="imageChangedEvent"
+                [maintainAspectRatio]="true"
+                [aspectRatio]="1 / 1"
+                [resizeToWidth]="400"
+                format="png"
+                (imageCropped)="imageCropped($event)"
+                (imageLoaded)="imageLoaded()"
+                (cropperReady)="cropperReady()"
+                (loadImageFailed)="loadImageFailed()"
+                class="col-md-6"></image-cropper>
+        </div>
+            <input type="file" (change)="fileChangeEvent($event)" />
+            <button type="submit" (click)="newImage()">Submit</button>
+            
         <form  #productForm="ngForm" novalidate (ngSubmit)="onSubmit(productForm)">
             <div class="form-group">
                 <label for="idProduct">Numero del Producto</label>
@@ -14,21 +33,25 @@
                 <label for="description">Descripcion</label>
                 <input type="text" class="form-control" name="description" [ngModel]="product?.description" ngModel required>
             </div>
-            <div class="form-group">
-                <label for="price">Precio</label>
-                <input type="text" class="form-control" name="price" [ngModel]="product?.price" ngModel required>
-            </div>
-            <div class="form-group">
-                <label for="color">Color</label>
-                <input type="text" class="form-control" name="color" [ngModel]="product?.color" ngModel required>
-            </div>
-            <div class="form-group">
-                <label for="size">Size</label>
-                <input type="text" class="form-control" name="size" [ngModel]="product?.size" ngModel required>
-            </div>
-            <div class="form-group">
-                <label for="quantity">Cantidad</label>
-                <input type="text" class="form-control" name="quantity" [ngModel]="product?.quantity" ngModel required>
+           <div class="row">
+           <div class="form-group col-md-6">
+               <label for="price">Precio</label>
+               <input type="text" class="form-control" name="price" [ngModel]="product?.price" ngModel required>
+           </div>
+           <div class="form-group col-md-6">
+               <label for="quantity">Cantidad</label>
+               <input type="text" class="form-control" name="quantity" [ngModel]="product?.quantity" ngModel required>
+           </div>
+           </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label for="color">Color</label>
+                    <input type="text" class="form-control" name="color" [ngModel]="product?.color" ngModel required>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="size">Size</label>
+                    <input type="text" class="form-control" name="size" [ngModel]="product?.size" ngModel required>
+                </div>
             </div>
             <div class="form-group">
                 <label for="numCategory">categoria</label>
@@ -37,8 +60,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="active">Activo</label>
-                <input type="checkbox" class="form-control checkbox" name="active" [ngModel]="product?.active" ngModel required>
+                <input type="checkbox" class="form-check-input" name="active" [ngModel]="product?.active" ngModel required>
+                <label for="active" class="form-check-label">Activo</label>
             </div>
             <div class="submit-container">
                 <button type="submit">Submit</button>
