--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Nuevo Producto</h1>
+    <h1>Nuevos Productos</h1>
     <div>
     <div class="row imgContainer">
             <div class="productImg col-md-5">
