crear view-product

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,21 @@
 .footer{
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   width: 100%;
-  height: 40px;
+  height: auto ;
+  padding: 10px 20px;
+   
+  background: rgb(70, 170, 160);
+  color: white;
+  
+}
 
+.left{
+  margin-top: 25px;
+}
+.right{
+  padding-left: 168px;
+}
+.form-control{
+  width: 50%;
 }
