--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -10,7 +10,7 @@
                     <div class="card-body">
                     <h5 class="card-title">{{producto.name}}</h5>
                     <p class="card-text">Precio: {{producto.price}}</p>
-                    <a href="#" class="btn btn-primary" (click)="verProduct() ">Go somewhere</a>
+                    <a routerLink="/view" class="btn btn-primary" (click)="verProduct() ">Ver!</a>
                     </div>
                 </div>
         </div>
