--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,25 @@
 <div class="footer">
-    <p>footer works!</p>
+  <div class="left row">
+      <form class="col-md-6">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-primary">Entrar</button>
+        </form>
+        <div class="right col-md-6">
+            <h1>Contactanos</h1>
+            <ul>
+                <li>info@momandbaby.com</li>
+                <li>809-555-5555</li>
+                <li>809-555-5555</li>
+                <li>Encuentranos</li>
+            </ul>
+        </div> 
+ </div>
 
 </div>
