--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,8 +7,8 @@
           <ul class="navbar-nav ul">
           
             <li class="nav-item dropdown">
-              <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                MAMI Y YO
+              <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" routerLink="/">
+                HOME<!-- MAMI Y YO -->
                 <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#">Action</a>
                   <a class="dropdown-item" href="#">Another action</a>
@@ -19,19 +19,19 @@
             </li>
             
             <li class="nav-item dropdown">
-              <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                ABUELA Y YO
+              <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" routerLink="/product">
+                CREAR PRODUCTO<!-- ABUELA Y YO -->
               </a>
             </li>
 
             <li class="nav-item dropdown">
-              <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                CONJUNTOS
+              <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" routerLink="/locate">
+                ENCUENTRANOS<!-- CONJUNTOS -->
               </a>
               
             </li>
 
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 VESTIDOS
               </a>
@@ -41,7 +41,7 @@
               <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ACCESORIOS
               </a>
-            </li>
+            </li> -->
             </ul>
           
         </div>
