--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -64,9 +64,11 @@
                 <label for="active" class="form-check-label">Activo</label>
             </div>
             <div class="submit-container">
-                <button type="submit" >Submit</button>
+                <button type="submit" class="btn btn-info btn-lg">Guardar</button>
               </div>
             
         </form>
     </div>
 </div>
+
+
