--- a/src/app/view-product/view-product.component.html
+++ b/src/app/view-product/view-product.component.html
@@ -1,1 +1,46 @@
-<p>view-product works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="imgProduct">
+                <img [src]="producto.image" alt="">
+            </div>
+        </div>       
+        <div class="col-md-5">
+                <div class="row title"><h1>{{producto.name}}</h1></div>
+                <div class="row price">RD$ {{producto.price}}</div>
+                <div class="row short">
+                    <h3>Especificaciones:</h3>
+                    <ul>
+                        <li><strong>Color:</strong> {{producto.color}}</li>
+                        <li><strong>Size:</strong> {{producto.size}}</li>
+                        <li><strong>Cantidad:</strong> {{producto.quantity}}</li>
+                    </ul>
+                </div>
+                <div class="row shipping"><strong><i>El pedido sera enviado de<br>5 a 8 dias Lavorables</i></strong> </div>
+                <br><br>
+                <div class="row order"><button type="button" class="btn btn-info btn-lg">Pre-Orden</button></div>
+         </div>
+    </div>
+   <div class="info" *ngIf="vista">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                       aria-selected="true">Description</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+                       aria-selected="false">Reglas de Envio</a>
+                </li>
+             </ul>
+             <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    {{producto.description}}
+                </div>
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                        Los productos serán entregados de 5 a 8 días laborables. El pago será entregado 
+                        contra entrega cuando el cliente verifique que la mercancía esta integra.
+
+                </div>
+             </div>
+   </div>
+</div>
